crates/swc_css_parser/tests/errors/number/minus-dot/output.stderr
error: Expected Declaration value
 --> $DIR/tests/errors/number/minus-dot/input.css:1:14
  |
1 | a { width: -0.; }
  |              ^

